Fix Overflow

--- a/site/style.css
+++ b/site/style.css
@@ -45,10 +45,11 @@ html, body {
 }
 
 .terminal-output {
+    max-height: 630px;
     max-width: 1000px;
     height: 90%;
     padding: 40px;
-    background-color: red; /*#1e1e1e*/
+    background-color: #1e1e1e; /*#1e1e1e*/
     border-radius: 40px;
     font-size: 16px;
     overflow-y: scroll;
